<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityGM">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:context=".MainActivityGM"/>

    <Button
        android:onClick="getLocationDetails"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="600dp"
        android:text="@string/GetLocation"/>

    <TextView
        android:id="@+id/textVu"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="530dp"
        android:text="@string/LocationDisplay" />

    <EditText
        android:id="@+id/editLat"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="500dp"
        android:hint="@string/Latitiude"
        android:minHeight="48dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/editLong"
        android:layout_marginTop="550dp"
        android:layout_marginStart="300dp"
        android:minHeight="48dp"
        android:hint="@string/Longitude"
        />

    <Button

        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/location_button1"
        android:layout_marginStart="100dp"
        android:layout_marginTop="600dp"
        android:text="@string/ME" />


</FrameLayout>
